hphp/hack/test/typecheck/class_pointers/case_types.php.exp
ERROR: File "case_types.php", line 5, characters 11-11:
Invalid case type declaration. More than one variant of `X` could contain values with the same runtime tag (Typing[4475])
  File "case_types.php", line 5, characters 15-20:
  This is the type `string`, which includes **strings**
  File "case_types.php", line 5, characters 24-35:
  It overlaps with `classname<C>`, which also includes **strings**
  File "classname.hhi", line 21, characters 28-38:
    via the constraint on the newtype `classname`
  File "classname.hhi", line 14, characters 27-32:
    via the constraint on the newtype `typename`
ERROR: File "case_types.php", line 8, characters 11-11:
Invalid case type declaration. More than one variant of `Y` could contain values with the same runtime tag (Typing[4475])
  File "case_types.php", line 8, characters 15-20:
  This is the type `string`, which includes **strings**
  File "case_types.php", line 8, characters 24-31:
  It overlaps with `class<C>`, which also includes **strings**
ERROR: File "case_types.php", line 9, characters 11-11:
Invalid case type declaration. More than one variant of `Z` could contain values with the same runtime tag (Typing[4475])
  File "case_types.php", line 9, characters 15-22:
  This is the type `class<C>`, which includes **strings**
  File "case_types.php", line 9, characters 26-37:
  It overlaps with `classname<C>`, which also includes **strings**
  File "classname.hhi", line 21, characters 28-38:
    via the constraint on the newtype `classname`
  File "classname.hhi", line 14, characters 27-32:
    via the constraint on the newtype `typename`
ERROR: File "case_types.php", line 13, characters 11-11:
Invalid case type declaration. More than one variant of `O` could contain values with the same runtime tag (Typing[4475])
  File "case_types.php", line 13, characters 15-15:
  This is the type `C`, which includes **instances of the class C**
  File "case_types.php", line 13, characters 19-26:
  It overlaps with `class<C>`, which includes **objects**
  File "case_types.php", line 13, characters 11-11:
  Because **instances of the class C** are also **objects**, `C` and `class<C>` cannot be in the same case type
